# Homepoint

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HomeControl.code-workspace  LICENSE.md  README.md  partitions.csv  project_description.json  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/m5stackcore2/: CMakeLists.txt
components/m5stackcore2/M5Core2/: .clang-format  .gitignore  README.md  README_cn.md  keywords.txt  library.json  library.properties
components/m5stackcore2/M5Core2/examples/Basics/mpu6886/: mpu6886.ino
components/m5stackcore2/M5Core2/examples/Basics/record/: record.ino
components/m5stackcore2/M5Core2/examples/Basics/rtc_wakeup/: rtc_wakeup.ino
components/m5stackcore2/M5Core2/examples/Basics/sleep/: sleep.ino
components/m5stackcore2/M5Core2/examples/Basics/speak/: data.c  speak.ino
components/m5stackcore2/M5Core2/examples/Touch/TouchGoal/: Goals.cpp  Goals.h  TouchGoal.ino
components/m5stackcore2/M5Core2/examples/Touch/TouchView/: TouchView.ino
components/m5stackcore2/M5Core2/examples/Touch/circles/: circles.ino
components/m5stackcore2/M5Core2/examples/Touch/events_buttons_gestures_rotation/: events_buttons_gestures_rotation.ino
components/m5stackcore2/M5Core2/examples/core2_for_aws/FactoryTest/: Core2Cover.c  Core2Main.c  FactoryTest.ino  Number8x7.c  SettingAppImage.c  TimerAppImage.c  WifiSacn.c  batPower.c  batRect.c  bibisig.c  clockImage.c  digNumber.c  digNumber_35px.c  image.c  imageMenu.c  initImage.c  line3D.cpp  line3D.h  main.cpp.old  power.c  rect_320_20.c  sdCardImage.c  touchFish.c  touchImage.c
components/m5stackcore2/M5Core2/examples/games/: floppybird.ino
components/m5stackcore2/M5Core2/src/: AXP192.cpp  AXP192.h  M5Core2.cpp  M5Core2.h  M5Display.h  M5Touch.cpp  M5Touch.h  M5TouchAdapter.cpp  M5TouchAdapter.h  RTC.cpp  RTC.h
components/m5stackcore2/M5Core2/src/Fonts/: EVA_10px.h  EVA_11px.h  EVA_20px.h  EVA_24px.h
components/m5stackcore2/M5Core2/src/Fonts/GFXFF/: gfxfont.h
components/m5stackcore2/M5Core2/src/utility/: CommUtil.cpp  Config.h  In_eSPI.cpp  In_eSPI.h  In_eSPI_Setup.h  M5Button.h  PointAndZone.cpp  PointAndZone.h  Sprite.cpp  Sprite.h  quaternionFilters.cpp
data/: Roboto-Bold22.vlw  Roboto-Medium16.vlw  Roboto-Regular22.vlw  Roboto-Thin22.vlw  config.json  config_example.json
data/captive/: app.js  index.htm
data/web/: app.js  index.htm
data/web/css/: normalize.css
main/: AppContext.cpp  AppContext.h  AppNewScreen.cpp  AppNewScreen.h  AppScreen.hpp  AppScreen.ipp  CMakeLists.txt  Kconfig.projbuild  component.mk  main.cpp
main/config/: Config.h  Fonts.hpp  HID_Config.h  Icon.hpp  PlatformInject.hpp  PlatformM5StackCore2.hpp  PlatformM5StackCore2Helpers.c  PlatformM5StackCore2Helpers.h  lv_conf.h
main/config/TFT_eSPI/AZTouch-MOD/: User_Setup.h
main/config/TFT_eSPI/Generic/: User_Setup.h
main/config/TFT_eSPI/M5StackCore2/: User_Setup.h  User_Setup_old.h
main/devices/: DeviceTypes.hpp
main/fs/: ConfigReader.cpp  ConfigReader.hpp  Filesystem.cpp  Filesystem.h  JsonHelper.hpp  spiffs_drv.c  spiffs_drv.h
main/homekit/: HKConfig.hpp  HKConnection.cpp  HKConnection.h  HKDevice.hpp  hkapi.c  hkapi.h
main/hue/: HueScanner.cpp  HueScanner.h
main/libraries/Adafruit_ILI9341/: Adafruit_ILI9341.cpp
main/libraries/TFT_eSPI/: TFT_eSPI.cpp  TFT_eSPI.h  User_Setup.h
main/libraries/TFT_eSPI/Extensions/: Button.cpp  Smooth_font.cpp  Touch.cpp
main/libraries/TFT_eSPI/Tools/Create_Smooth_Font/Create_font/: Create_font.pde
main/libraries/TFT_eSPI/Tools/Create_Smooth_Font/Create_font/FontFiles/: Final-Frontier20.vlw  SFProText-Bold20.vlw  SFProText-Bold24.vlw  SFProText-Medium16.vlw  SFProText-Regular12.vlw  SFProText-Regular16.vlw  SFProText-Regular6.vlw  System_Font_List.txt
main/libraries/lvgl/: Kconfig
main/libraries/variant/include/mpark/: variant.hpp
main/model/: HardwareConfig.hpp  Model.hpp
main/mqtt/: MQTTConnection.cpp  MQTTConnection.h  MQTTGroup.hpp  MQTTSensorGroup.hpp  MQTTSensorTypes.hpp  MQTTSensorUtils.hpp  MQTTStateUpdater.hpp  MQTTSwitchableModes.hpp
main/ntp/: NTPSync.cpp  NTPSync.h
main/sound/: BeepGenerator.hpp
main/tests/: CMakeLists.bak  UIPositionTests.cpp
main/tft/: ScreenSaver.hpp  TFTESPIDriver.hpp  TFTM5StackDriver.hpp
main/tft/other/: AdaILI9341Driver.cpp  AdaILI9341Driver.h  MiniGrafxDriver.hpp  README.md
main/touch/: ButtonDriver.cpp  ButtonDriver.h  ButtonTypes.h  TouchDriver.cpp  TouchDriver.h  TouchDriver.ipp  TouchTypes.hpp
main/ui/: ActionCallback.hpp  Color.hpp  Icons.hpp  PROGMEMIconDrawer.hpp  PROGMEMIcons.h  SPIFFSIconDrawer.hpp  ScreenNavigator.hpp  Styles.cpp  Styles.h  UIButton.cpp  UIButton.h  UIDetailButtonBuilder.hpp  UIErrorWidget.hpp  UIMenuBar.cpp  UIMenuBar.h  UIMosaicButton.cpp  UIMosaicButton.h  UIMosaicMenuWidget.cpp  UIMosaicMenuWidget.hpp  UIPageButton.cpp  UIPageButton.h  UIPosition.hpp  UISensorComboButton.cpp  UISensorComboButton.h  UISensorComboWidget.cpp  UISensorComboWidget.h  UIStatusBar.cpp  UIStatusBar.h  UIStatusBarWidget.cpp  UIStatusBarWidget.h  UISwitchDeviceButton.cpp  UISwitchDeviceButton.h  UIWidget.cpp  UIWidget.hpp  UIWidgetBuilder.hpp
main/ui/icons/: IconIncludes.hpp  bedroom_img.c  door.c  door_img.c  fan_img.c  fountain_img.c  garden_img.c  kitchen_img.c  livingroom_img.c  night_img.c  power_img.c
main/util/: dispatcher.hpp  optional.hpp  stdextend.hpp  timer.hpp  varianthelper.hpp  warnings.h
main/web/: WebServer.cpp  WebServer.h
main/wifi/: CaptiveServer.cpp  CaptiveServer.h  WifiContext.cpp  WifiContext.h
scripts/: build_all.sh  merge_bin_esp.py  readme.txt
scripts/TFT_eSPI/: User_Setup_M5Stack.h
sdkconfigs/: sdconfig_aztouchmod  sdkconfig_m5core2
